--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
 
     <dependencies>
 
+
+
         <!--TestNG -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -112,8 +114,7 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>5.3.2</version>
-            <scope>test</scope>
+            <version>5.4.0</version>
         </dependency>
 
         <dependency>
@@ -139,6 +140,14 @@
             </exclusions>
 
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.25.1</version>
+        </dependency>
+
 
 
     </dependencies>
@@ -190,6 +199,8 @@
                         <artifactId>aspectjweaver</artifactId>
                         <version>1.9.19</version>
                     </dependency>
+
+
                 </dependencies>
 
             </plugin>
